@@ -1169,16 +1169,21 @@ void Core::startMplayer( QString file, double seek ) {
 
 	proc->addArgument("-identify");
 
-	// We need this to get info about mkv chapters
-	if (is_mkv) {
-		proc->addArgument("-msglevel");
-		proc->addArgument("demux=6");
+	if (MplayerVersion::isMplayerAtLeast(27667)) {
+		// From r27667 the number of chapters can be obtained from ID_CHAPTERS
+		mset.current_chapter_id = 0; // Reset chapters
+	} else {
+		// We need this to get info about mkv chapters
+		if (is_mkv) {
+			proc->addArgument("-msglevel");
+			proc->addArgument("demux=6");
 
-		// **** Reset chapter *** 
-		// Select first chapter, otherwise we cannot
-		// resume playback at the same point
-		// (time would be relative to chapter)
-		mset.current_chapter_id = 0;
+			// **** Reset chapter *** 
+			// Select first chapter, otherwise we cannot
+			// resume playback at the same point
+			// (time would be relative to chapter)
+			mset.current_chapter_id = 0;
+		}
 	}
 	
 	proc->addArgument("-slave");
